# AI.R-ATV

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  ros_entrypoint.sh
.github/workflows/: ci.yml  cicd.yml
3D Modeling/speed_sensor/: speed_sensor_stand_V1 (1).stl
Documents/Snower/: frames_2025-05-07_12.54.19.gv
ESP32/: ATV.c  ATV.h  ESP32.ino  How to make this work 2023.txt  README.md  esp32_microros_publisher_demo.ino  pwmread_rcfailsafe.ino
ESP32/GNSS/: GNSS.ino  secrets.h
ESP32/MicroROS_Demo/: esp32_microros_publisher_demo.ino
ESP32/Ultrasonic/: Ultrasonic.ino
ESP32/esp32_microros_publisher_demo/: esp32_microros_publisher_demo.ino
Firmware/: .gitignore  README.md
Firmware/ATV/: README.md
Firmware/Robots/: README.md
Firmware/Trigger/: Trigger.ino  platformio.ini  wifi_secrets.h
Firmware/Ultrasonic/: Ultrasonic.ino  platformio.ini
Hardware/: README.md
Hardware/Data_logging/: data_logger.py  first_driving_test.xlsx  full_1.xlsx  measurements.xlsx  measurements_1.xlsx  measurements_2.xlsx  (+1 more)
Jetson/: Dockerfile  README.md  docker-compose.yml
Software/: .gitignore  Dockerfile  README.md  cicd-docker-compose.yml  cyclonedds-config.xml  docker-compose.yml  microros.Dockerfile  ouster-ros.Dockerfile  ros_entrypoint.sh  ros_run.sh  seek-thermal.Dockerfile  zenoh-router-config.json5
Software/ros2_ws/src/atv/: package.xml  setup.cfg  setup.py
Software/ros2_ws/src/atv/atv/: atv.py  data_collector.py  map_to_odom_tf.py  odom_publisher.py  odom_to_baselink_tf.py  test_gpio.py  thermal.py  thermal_camera_publisher.py  wheel_odom_publisher.py
Software/ros2_ws/src/atv/config/: robot_localization.yaml
Software/ros2_ws/src/atv/launch/: data_collector.launch.py  run.launch.py
Software/ros2_ws/src/atv/urdf/: ouster_lidar.xacro  snower.urdf  snower.urdf.xacro  snower_core.xacro  zed2_camara.xacro  zedf9p_gnss.xacro
Software/ros2_ws/src/robot/: CMakeLists.txt  package.xml  setup.py
Software/ros2_ws/src/robot/config/: robot_localization.yaml
Software/ros2_ws/src/robot/launch/: run.launch.py
Software/ros2_ws/src/robot/robot/: robot_debug.py  wheel_odom_publisher.py
Software/ros2_ws/src/robot/rviz/: monitor_sensors.rviz
Software/ros2_ws/src/robot/src/: imu_bias_correction_node.cpp
Software/ros2_ws/src/robot/urdf/: zed2_camara.xacro  zedf9p_gnss.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
(+149 files in other folders)
