<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot</name>
  <version>0.0.1</version> <!-- Päivitetty versio -->
  <description>ROS2 package for controlling robot</description> <!-- Lisää kuvaus -->
  <maintainer email="sohanjanaka101@gmail.com">sohan-lapinamk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend> <!-- Jos käytät tätä, lisää se -->
  <depend>geometry_msgs</depend> <!-- Jos käytät tätä, lisää se -->
  <depend>sensor_msgs</depend> <!-- Jos käytät ZED2:n kuvia, lisää se -->
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
